--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
-    "next": "14.0.3",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "jsx-email": "^1.10.9",
     "postcss": "^8",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
